--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "fabric": "^6.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-sketch": "^0.5.1",
+    "react-sketch-canvas": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,7 +39,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-
     ]
   }
 }
